Extend user-select

--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 }
 
@@ -40,7 +45,7 @@ body {
 }
 
 canvas {
-    position: absolute; 
+    position: absolute;
     top: 0px;
     left: 0px;
     width: auto;
