--- a/style.css
+++ b/style.css
@@ -36,11 +36,8 @@
     color-scheme: light;
 }
 
-body {
-    /* width: 100%;
-    height: 100%; */
-    width: fit-content;
-    overflow: hidden;
+html, body {
+    overflow:hidden;
 }
 
 canvas {
